--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ org.gradle.jvmargs=-Xmx3G
 	fabric_version = 0.37.0+1.16
 	oak_tree_version = 0.4.2-beta
 	sqlite_version = 3.30.1
+	json_version = 20210307
